syntax = "proto3";

package rotator;

option go_package = "github.com/dragun-igor/rotator-banner/pkg/pb";

service Rotator {
    rpc AddBannerToSlot(AddBannerToSlotRequest) returns (AddBannerToSlotResponse);
    rpc RemoveBannerFromSlot(RemoveBannerFromSlotRequest) returns (RemoveBannerFromSlotResponse);
    rpc SelectBanner (SelectBannerRequest) returns (SelectBannerResponse);
}

message AddBannerToSlotRequest {
    uint32 banner_id = 1;
    uint32 slot_id = 2;
}

message AddBannerToSlotResponse {
}

message RemoveBannerFromSlotRequest {
    uint32 banner_id = 1;
    uint32 slot_id = 2;
}

message RemoveBannerFromSlotResponse {
}

message SelectBannerRequest {
    uint32 slot_id = 1;
    uint32 user_group_id = 2;
}

message SelectBannerResponse {
    uint32 banner_id = 1;
}

message AddBanner {
    string description = 1;
}

message AddSlot {
    string description = 1;
}

message AddUserGroup {
    string description = 1;
}